GOA-2498 - fixing the centre alignment differences between home page and top menu

--- a/app/styles/quickgo.scss
+++ b/app/styles/quickgo.scss
@@ -300,6 +300,9 @@ aspect-icon span.aspect-icon{
   margin-bottom: 0px;
 }
 
+.startpoint-panel .typeahead-box{
+  margin-left: 20px;
+}
 
 /* BASKET    ---------------------------------------------------------------------------------------------------------*/
 
